--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -25,7 +25,7 @@
           <a class="control-item" href="#thisweek">本周 <span class="badge badge-danger hidden" id="tab-badge-thisweek"></span></a>
           <a class="control-item" href="#undone">未完成 <span class="badge badge-danger hidden" id="tab-badge-undone"></span></a>
         </nav>
-        <div class="slider-progress-bar col-xs-3"></div>
+        <!-- <div class="slider-progress-bar col-xs-3"></div> -->
       </div>
       <div class="slide-group" id="listview">
         <div id="today" class="slide control-content active">
