* added 'swipeback' class to body of task.html.

--- a/zentao/task.html
+++ b/zentao/task.html
@@ -17,7 +17,7 @@
     #timeBarConsumed {background-color: #5ee174;}
   </style>
 </head>
-<body>
+<body class="swipeback">
 <header class="bar headbar bar-nav">
   <h1 class="title action-back"><i class="icon icon-angle-left"></i> 任务</h1>
 </header>
