--- a/zentao/index.html
+++ b/zentao/index.html
@@ -37,9 +37,10 @@
     #userStatus[data-status="online"] #userStatusIcon {background: #4CD964; border-color: #27b43f; border-style: solid}
     #userStatus[data-status="logging"] #userStatusIcon {background: #F0AD4E; border-color: #dfa655; -webkit-animation: loggingFlash 1s ease 0 infinite normal; animation: loggingFlash 1s ease 0 infinite normal;}
     #userStatus.syncing[data-status="online"] #userStatusIcon {background: #4CD964; border-color: #27b43f; -webkit-animation: syncingFlash 1s ease 0 infinite normal; animation: syncingFlash 1s ease 0 infinite normal;}
-    .open-listview.unread {position: relative;}
-    .open-listview.unread .icon, .open-listview.unread .tab-label {z-index: 5}
-    .open-listview.unread:after {border-radius: 4px; display: block; width: 8px; height: 8px; background-color: red; content: ' '; position: absolute; left: 51%; top: 10px; z-index: 10}
+    .open-listview .unread-count {display: none;}
+    .open-listview.unread > .icon {position: relative;}
+    .open-listview.unread > .icon > .icon, .open-listview.unread .tab-label {z-index: 5}
+    .open-listview.unread .unread-count {display: block; border-radius: 8px; width: auto; min-width: 16px; height: 16px; background-color: #d9534f; position: absolute; right: -5px; top: -1px; z-index: 10; font-size: 12px; color: #fff; text-align: center; line-height: 14px; padding: 0 4px}
     </style>
 </head>
 <body>
@@ -50,20 +51,20 @@
   </header>
 
   <nav class="bar bar-tab" id="listviewNav">
-    <a class="tab-item open-listview active" href="#todo" data-id="todo" id="tab-todo">
-      <span class="icon"><i class="icon icon-check-square-o"></i></span>
+    <a class="tab-item open-listview active unread" href="#todo" data-id="todo" id="tab-todo">
+      <span class="icon"><i class="icon icon-check-square-o"></i> <span class="unread-count">132</span></span>
       <span class="tab-label">待办</span>
     </a>
     <a class="tab-item open-listview" href="#task" data-id="task" id="tab-task">
-      <span class="icon"><i class="icon icon-tasks"></i></span>
+      <span class="icon"><i class="icon icon-tasks"></i> <span class="unread-count"></span></span>
       <span class="tab-label">任务</span>
     </a>
     <a class="tab-item open-listview" href="#bug" data-id="bug" id="tab-bug">
-      <span class="icon"><i class="icon icon-bug"></i></span>
+      <span class="icon"><i class="icon icon-bug"></i> <span class="unread-count"></span></span>
       <span class="tab-label">Bug</span>
     </a>
     <a class="tab-item open-listview" href="#story" data-id="story" id="tab-story">
-      <span class="icon"><i class="icon icon-lightbulb-o"></i></span>
+      <span class="icon"><i class="icon icon-lightbulb-o"></i> <span class="unread-count"></span></span>
       <span class="tab-label">需求</span>
     </a>
   </nav>
