--- a/zentao/stories.html
+++ b/zentao/stories.html
@@ -13,9 +13,9 @@
   <div class="slider" id="slider">
       <div class="slider-header">
         <div class="slider-indicator segmented-control segmented-control-inverted" id="listviewNav">
-          <a class="control-item active" href="#assignedTo">指派给我 <span class="badge badge-danger hidden" id="tab-badge-assignedTo"></span></a>
-          <a class="control-item" href="#openedBy">由我创建 <span class="badge badge-danger hidden" id="tab-badge-openedBy"></span></a>
-          <a class="control-item" href="#reviewedBy">由我评审 <span class="badge badge-danger hidden" id="tab-badge-reviewedBy"></span></a>
+          <a class="control-item active" href="#assignedTo">指派给我 <span class="badge badge-negative hidden" id="tab-badge-assignedTo"></span></a>
+          <a class="control-item" href="#openedBy">由我创建 <span class="badge badge-negative hidden" id="tab-badge-openedBy"></span></a>
+          <a class="control-item" href="#reviewedBy">由我评审 <span class="badge badge-negative hidden" id="tab-badge-reviewedBy"></span></a>
         </div>
         <div class="slider-progress-bar col-xs-4"></div>
       </div>
@@ -88,15 +88,15 @@ var listview = new ListView('story', function(tab, data, lessCount)
         $storys.appendChild(item);
     });
 
-    if(!displayShowMore)
-    {
-        item = document.createElement('li');
-        item.classList.add('table-view-cell');
-        item.classList.add('nomore-tip');
-        item.setAttribute('data-tab', tab);
-        item.innerHTML = '共 <strong>' + count + '</strong>项，没有更多';
-        $storys.appendChild(item);
-    }
+    // if(!displayShowMore)
+    // {
+    //     item = document.createElement('li');
+    //     item.classList.add('table-view-cell');
+    //     item.classList.add('nomore-tip');
+    //     item.setAttribute('data-tab', tab);
+    //     item.innerHTML = '共 <strong>' + count + '</strong>项，没有更多';
+    //     $storys.appendChild(item);
+    // }
 
     this.updateTabBadge(tab, unreadCount);
 });
