* removed unused code. * fixed errors in listview.js.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -51,8 +51,8 @@
   </header>
 
   <nav class="bar bar-tab" id="listviewNav">
-    <a class="tab-item open-listview active unread" href="#todo" data-id="todo" id="tab-todo">
-      <span class="icon"><i class="icon icon-check-square-o"></i> <span class="unread-count">132</span></span>
+    <a class="tab-item open-listview active" href="#todo" data-id="todo" id="tab-todo">
+      <span class="icon"><i class="icon icon-check-square-o"></i> <span class="unread-count"></span></span>
       <span class="tab-label">待办</span>
     </a>
     <a class="tab-item open-listview" href="#task" data-id="task" id="tab-task">
