--- a/zentao/setting/index.html
+++ b/zentao/setting/index.html
@@ -44,7 +44,7 @@
     </ul>
     <h5 style="padding: 8px 10px 2px">关于</h5>
     <ul class="table-view">
-      <li class="table-view-cell"><span class="text-muted">版本 </span><span>0.1.2 beta</span> <button class="btn" id="checkVersion">检查新版本</button></li>
+      <li class="table-view-cell"><span class="text-muted">版本 </span><span>0.1.2 BETA</span> <button class="btn" id="checkVersion">检查新版本</button></li>
     </ul>
   </div>
   <div class="dialog fixed" id="syncIntervalDialog">
