* commented console for debug.

--- a/zentao/setting/index.html
+++ b/zentao/setting/index.html
@@ -121,7 +121,7 @@ window.plusReady(function()
     }
     $switcher.on('toggle', function(event)
     {
-        console.log('toggle', event);
+        // console.log('toggle', event);
         options.receiveNotify = event.detail.isActive;
     });
 
