* ajusted style of table-view.

--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -12,7 +12,7 @@
   .table-view-cell.done .list-title-name {opacity: 0.8; color: #999}
   .table-view-cell.done .icon {opacity: 0.75; border-color: #5cb85c; color: #5cb85c; top: 0px}
   .table-view-cell.active .icon {opacity: 0.75;}
-  .table-view-cell > .list-title {padding-right: 90px;}
+  .table-view-cell > a {padding-right: 90px !important;}
   </style>
 </head>
 <body data-slider="#slider"> 
