* added logo image to the title bar.  * ajusted primary color and rebuilt m.zui.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -47,7 +47,7 @@
   <header class="bar bar-nav headbar">
     <button type="button" class="btn btn-link btn-nav pull-right" id="settingBtn"><i class="icon icon-cog-outline"></i></button>
     <button data-status="logging" id="userStatus" class="syncing btn btn-link btn-nav pull-right"><span id="userStatusIcon"></span> <span id="loginText">登录</span></button>
-    <h1 class="title">禅道 <span id="userStatusName">连接中…</span></h1>
+    <h1 class="title"><img src="img/logo.png" alt="">禅道 <span id="userStatusName">连接中…</span></h1>
   </header>
 
   <nav class="bar bar-tab" id="listviewNav">
