--- a/zentao/login.html
+++ b/zentao/login.html
@@ -10,7 +10,7 @@
     #login
     {
       margin: auto;
-      background: #428bca;
+      background: #2d81e5;
       position: absolute;
       left: 0;
       top: 0;
@@ -54,7 +54,7 @@
     }
     #loginForm .btn-primary
     {
-      background: #0071bd
+      background: #0065a9
     }
     #backBtn, #tipButton
     {
