* changed version.  * updated zentao banner image.

--- a/zentao/login.html
+++ b/zentao/login.html
@@ -10,7 +10,7 @@
     #login
     {
       margin: auto;
-      background: #2d81e5;
+      background: #007bc6;
       position: absolute;
       left: 0;
       top: 0;
@@ -89,7 +89,7 @@
           </div>
           <button id="loginBtn" type="button" class="btn btn-primary btn-block">登录</button>
           <button id="backBtn" type="button" class="btn btn-block action-back hidden" data-aniType='fade-out'>离线使用<!--  <i class="icon icon-arrow-right"></i> --></button>
-          <button id="tipButton" type="button" class="btn btn-block action-back">0.1.2 BETA</button>
+          <button id="tipButton" type="button" class="btn btn-block action-back">0.1.3 beta</button>
         </div>
       </div>
     </section>
