--- a/zentao/setting/index.html
+++ b/zentao/setting/index.html
@@ -44,7 +44,7 @@
     </ul>
     <h5 style="padding: 8px 10px 2px">关于</h5>
     <ul class="table-view">
-      <li class="table-view-cell"><span class="text-muted">版本 </span><span>0.1.3 beta</span> <button class="btn" id="checkVersion">检查新版本</button></li>
+      <li class="table-view-cell"><span class="text-muted">版本 </span><span>0.1.3 beta</span> <!-- <button class="btn" id="checkVersion">检查新版本</button> --></li>
     </ul>
   </div>
   <div class="dialog fixed" id="syncIntervalDialog">
@@ -52,8 +52,8 @@
       <h1 class="title close-dialog"><i class="icon icon-angle-left"></i> 自动同步频率</h1>
     </header>
     <ul class="table-view" id="syncIntervalList">
-      <li class="table-view-cell radio left sync-interval-option" id="syncInterval-20000">
-      <input name="syncInterval" type="radio" value='20000'> <span class="name">20秒</span> <span class="pull-right"><i class="icon icon-check"></i></span>
+      <li class="table-view-cell radio left sync-interval-option" id="syncInterval-15000">
+      <input name="syncInterval" type="radio" value='15000'> <span class="name">15秒</span> <span class="pull-right"><i class="icon icon-check"></i></span>
       </li>
       <li class="table-view-cell radio left sync-interval-option" id="syncInterval-60000">
         <input name="syncInterval" type="radio" value='60000'> <span class="name">1分钟</span> <span class="pull-right"><i class="icon icon-check"></i></span>
