--- a/zentao/index.html
+++ b/zentao/index.html
@@ -70,6 +70,7 @@
   </nav>
 
 <script src="js/lib/md5.min.js"></script>
+<!-- <script src="js/lib/gzip.js"></script> -->
 <script src="js/lib/zui.m.js"></script>
 <script src="js/userdata.js"></script>
 <script src="js/zentao.js"></script>
