--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   .btn-download:hover {background-color: #bb90cf; color: #fff}
   .btn-download .icon {font-size: 28px;}
   .btn-link, .btn-link:hover {color: #8957a1}
+  .btn > i {font-size: 28px;}
   .desc {padding: 10px; opacity: 0.75}
   .centerbox.in {z-index: 20}
   </style>
@@ -27,10 +28,11 @@
       <a href="publish/android/zentao_0.1.3.beta_20141112.apk" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
       <div class="desc text-center">0.1.3 beta</div>
       <div class="desc text-center">
-        <button type="button" class="btn btn-link" id="showUpdate">版本亮点</button>
+        <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#backBox" title="版本亮点"><i class="icon-flag-checkered"></i></button>
+        <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#qrcodeBox" title="手机访问"><i class='icon-qrcode'></i></button>
       </div>
     </div>
-    <div class="centerbox fade scale" id="backBox">
+    <div class="centerbox fade scale btn-box" id="backBox" data-target="#frontBox">
       <h3 class='text-center'>版本亮点</h3>
       <ul style="padding-left: 80px">
         <li>仅支持禅道专业版4.2</li>
@@ -39,7 +41,16 @@
         <li>修复一些问题</li>
       </ul>
       <div class="desc text-center">
-        <button type="button" class="btn btn-link">返回</button>
+      <button type="button" class="btn btn-link" title="返回下载"><i class="icon-download"></i></button>
+      </div>
+    </div>
+    <div class="centerbox fade scale btn-box" id="qrcodeBox" data-target="#frontBox">
+      <h3 class='text-center' style="margin: 0 0 10px 0">手机扫描访问</h3>
+      <div class="desc text-center" style="padding: 0">
+        <img src="img/qrcode.jpg" alt="" style="width: 160px; height:160px ">
+      </div>
+      <div class="desc text-center" style="padding: 5px">
+        <button type="button" class="btn btn-link" title="返回下载"><i class="icon-download"></i></button>
       </div>
     </div>
   </div>
@@ -47,17 +58,11 @@
 <script>
 $(function()
 {
-    var $front = $('#frontBox'), $back = $('#backBox');
-    $('#showUpdate').on('click', function()
+    $('.btn-box').on('click', function()
     {
-        $front.toggleClass('in');
-        $back.toggleClass('in');
-    });
-
-    $back.on('click', function()
-    {
-        $front.toggleClass('in');
-        $back.toggleClass('in');
+        var $btn = $(this);
+        $('.centerbox').removeClass('in');
+        $($btn.data('target')).addClass('in');
     });
 });
 </script>
