* support img tag when show item detail.

--- a/zentao/bug.html
+++ b/zentao/bug.html
@@ -35,7 +35,7 @@
   </header>
   <section>
     <h5><i class="icon icon-th-list"></i> 重现步骤</h5>
-    <div class="content-padded obj-steps article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="content-padded obj-steps article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>" data-type="html"></div>
   </section>
 </div>
 <script src="js/lib/zui.m.js"></script>
