--- a/zentao/story.html
+++ b/zentao/story.html
@@ -34,11 +34,11 @@
   </header>
   <section>
     <h5>需求描述</h5>
-    <div class="content-padded obj-desc" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="content-padded obj-desc" data-type="html" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
   <section>
     <h5>验收标准</h5>
-    <div class="content-padded obj-steps" data-default="<span class='small text-muted'>--- 没有验收标准 ---</span>"></div>
+    <div class="content-padded obj-steps" data-type="html" data-default="<span class='small text-muted'>--- 没有验收标准 ---</span>"></div>
   </section>
 </div>
 <script src="js/lib/zui.m.js"></script>
