--- a/zentao/task.html
+++ b/zentao/task.html
@@ -45,7 +45,7 @@
   </section>
   <section>
     <h5>描述</h5>
-    <div class="content-padded obj-desc article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="content-padded obj-desc article-content-plain" data-type="html" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
 </div>
 <script src="js/lib/zui.m.js"></script>
