--- a/zentao/todo.html
+++ b/zentao/todo.html
@@ -30,7 +30,7 @@
   </header>
   <section>
     <h5>描述</h5>
-    <div class="content-padded obj-desc article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="content-padded obj-desc article-content-plain" data-type="html" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
 </div>
 <script src="js/lib/zui.m.js"></script>
