--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="wrapper">
     <div class="centerbox fade scale in" id="frontBox">
       <h3 class="text-center">禅道手机客户端</h3>
-      <a href="publish/android/zentao_0.1.3.beta_20141117.apk" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
-      <div class="desc text-center">0.1.3 beta</div>
+      <a href="publish/android/zentao_0.1.4.beta_20141117" class="btn btn-lg btn-download btn-large" target="_blank"><i class="icon-android icon"></i> 下载</a>
+      <div class="desc text-center">0.1.4 beta</div>
       <div class="desc text-center">
         <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#backBox" title="版本亮点"><i class="icon-flag-checkered"></i></button>
         <button type="button" class="btn btn-link btn-box" id="showUpdate" data-target="#qrcodeBox" title="手机访问"><i class='icon-qrcode'></i></button>
@@ -35,9 +35,9 @@
     <div class="centerbox fade scale btn-box" id="backBox" data-target="#frontBox">
       <h3 class='text-center'>版本亮点</h3>
       <ul style="padding-left: 80px">
-        <li>仅支持禅道专业版4.2</li>
-        <li>全新API，更快，更省流量</li>
-        <li>新的配色方案，完善界面细节</li>
+        <li>支持多用户切换</li>
+        <li>支持API数据压缩</li>
+        <li>详情页面描述支持图片</li>
         <li>修复一些问题</li>
       </ul>
       <div class="desc text-center">
