+ added config.js.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -73,6 +73,7 @@
 <script src="js/lib/decode64.js"></script>
 <script src="js/lib/zlib.js"></script>
 <script src="js/lib/zui.m.js"></script>
+<script src="js/config.js"></script>
 <script src="js/userdata.js"></script>
 <script src="js/zentao.js"></script>
 <script src="js/webview.js"></script>
