--- a/zentao/tasks.html
+++ b/zentao/tasks.html
@@ -42,6 +42,7 @@
 </div>
 
 <script src="js/lib/zui.m.js"></script>
+<script src="js/config.js"></script>
 <script src="js/webview.js"></script>
 <script src="js/userdata.js"></script>
 <script src="js/listview.js"></script>
