--- a/zentao/todo.html
+++ b/zentao/todo.html
@@ -34,6 +34,7 @@
   </section>
 </div>
 <script src="js/lib/zui.m.js"></script>
+<script src="js/config.js"></script>
 <script src="js/webview.js"></script>
 <script src="js/itemview.js"></script>
 <script src="js/dialog.js"></script>
