--- a/zentao/index.html
+++ b/zentao/index.html
@@ -38,9 +38,10 @@
     #userStatus[data-status="logging"] #userStatusIcon {background: #F0AD4E; border-color: #dfa655; -webkit-animation: loggingFlash 1s ease 0 infinite normal; animation: loggingFlash 1s ease 0 infinite normal;}
     #userStatus.syncing[data-status="online"] #userStatusIcon {background: #4CD964; border-color: #27b43f; -webkit-animation: syncingFlash 1s ease 0 infinite normal; animation: syncingFlash 1s ease 0 infinite normal;}
     .open-listview .unread-count {display: none;}
-    .open-listview.unread > .icon {position: relative;}
+    .open-listview > .icon {min-width: 20px; display: inline-block;}
+    .open-listview.unread > .icon {position: relative; text-align: center;}
     .open-listview.unread > .icon > .icon, .open-listview.unread .tab-label {z-index: 5}
-    .open-listview.unread .unread-count {display: block; border-radius: 8px; width: auto; min-width: 16px; height: 16px; background-color: #d9534f; position: absolute; right: -5px; top: -1px; z-index: 10; font-size: 12px; color: #fff; text-align: center; line-height: 14px; padding: 0 4px}
+    .open-listview.unread .unread-count {display: block; border-radius: 5px; width: auto; text-indent: -999em; min-width: 10px; height: 10px; background-color: #d9534f; position: absolute; right: -2px; top: 1px; z-index: 10; font-size: 12px; color: #fff; text-align: center; line-height: 14px; padding: 0 4px}
     </style>
 </head>
 <body>
