--- a/zentao/todo.html
+++ b/zentao/todo.html
@@ -10,7 +10,8 @@
   <link href="css/dialog.css" rel="stylesheet"/>
 </head>
 <body class="swipeback">
-<header class="bar headbar bar-nav">  
+<header class="bar headbar bar-nav">
+  <i class="icon icon-spinner waiting"></i>
   <h1 class="title action-back"><i class="icon icon-angle-left"></i> 待办</h1>
 </header>
 <div class="dialog" id="dialog">
