--- a/zentao/bug.html
+++ b/zentao/bug.html
@@ -11,6 +11,7 @@
 </head>
 <body class="swipeback">
 <header class="bar headbar bar-nav">
+  <i class="icon icon-spinner waiting"></i>
   <h1 class="title action-back"><i class="icon icon-angle-left"></i> Bug</h1>
 </header>
 <div class="dialog" id="dialog">
